[CRNT-38581] : Minor Fix for misalignment of the info icon on abort and join notification. Bug :CRNT-38581

--- a/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
+++ b/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
@@ -185,6 +185,9 @@ padding : 5px;;
 	width : 100px;
 }
 
+.notification-icon {
+ 	float:left;
+ }
 
 .sd-abort-noti-dlg .notification-body {
 	padding: 0 25px 25px 25px;
